<resources>
    <string name="app_name">Project_Final</string>
    <string name="mainPager_longTxt">위하여 광야에서 방황하였으며 공자는 무엇을 위하여 천하를 철환하였는가? 밥을 위하여서 옷을 위하여서 미인을 구하기 위하여서 그리하였는가? 아니다 그들은 커다란 이상 곧 만천하의 대중을 품에 안고 그들에게 밝은 길을 찾아 주며 그들을 행복스럽고</string>
    <string name="title_sample">Sample Title</string>
    <string name="drawer_opened">Opened Drawer</string>
    <string name="drawer_closed">Closed Drawer</string>
    <string name="user_name">User Name</string>

    <string name="sample_txt_1">모바일 프로그래밍</string>
    <string name="sample_txt_2">스마트 포트폴리오</string>
    <string name="sample_txt_3">콘텐츠IT</string>
    <string name="sample_txt_4">20185256</string>
    <string name="sample_txt_5">안수한</string>
    <string name="sample_txt_6">프로젝트</string>
    <string name="sample_txt_7">https://github.com/AnSuHan/moblie_programming</string>



    <string name="fragment_data_binding">https://juahnpop.tistory.com/215</string>
    <string name="fragment_context">https://yuuj.tistory.com/30</string>
    <string name="runOnUiThread_data">https://magicalcode.tistory.com/48</string>
    <string name="thread_repeating">https://yunhookim.tistory.com/12</string>
    <string name="drawer_auto_close">https://stackoverflow.com/questions/56550366/how-to-fully-implement-the-navigation-drawer-template-in-kotlin</string>
    <string name="drawer_open_toolbar_btn">https://minf.tistory.com/34</string>
    <string name="drawer_icon_left">https://eskeptor.tistory.com/61</string>

    <string name="source_profile_photo">https://www.flaticon.com/search?word=image</string>
    <string name="source_cross_icon">https://bit.ly/3UYQrkU</string>
    <string name="source_menu_icon_line">https://bit.ly/3O8NgF9</string>
    <string name="source_menu_icon_dot.png">https://bit.ly/3AdKqZK</string>
    <string name="source_twitter_icon.png">https://www.pngwing.com/ko/free-png-memef</string>
    <string name="source_intro_person_img">"<a href="https://www.flaticon.com/kr/free-icons/" title="매니저 아이콘">매니저 아이콘  제작자: Those Icons - Flaticon</a>"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>